--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,7 +25,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-800">
+  <body class="bg-gradient-to-br from-sky-100 to-emerald-100 text-slate-800">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
